# tailbb

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-bin  dev-db.sh  readme.txt  sample-data.sql  sample.env
.sqlx/: query-0b31dc42398968fde3066095ebf6ee59301c802c12dfc401fd96698950f199ac.json  query-19caadb24ae09ee36575111ae077e2a939fdfc82ba4da29dcf45d224f5263f4a.json  query-2ce0b61500197e249d6f0acb1ad47b942fc33aec63f9f3e503d1222b5e6f007a.json  query-33ba6452e0f3eb0d3679c6b8e1c89e78db7ff5b0f37b160b4c00f8c3bd342ba1.json  query-3ae150723e89bca393a8375376ccc63805accc1d72ab51e4842da4e10187f4d0.json  query-507b63d62f6b3ea1e7c78ec6df61cfc027e9d4eb4b90448950f807a827a9e944.json  query-53d074845c106b7d0cf517e75eed8bf78dd4b137a32bef2412bbfe194e6022c3.json  query-5e72a5adb10ad1da801a0c92427ae089efcb5e50455fb5c94c8ed8294f9a597a.json  query-a6b5920b93a0ae76cb7fd007fcf00a0131208edb48f309551933766cc242c1bf.json  query-b557d7ff71fc27f4d4cdd5a32e451a347b45195e7e9b04ac25a2cf3245adefff.json  query-bdb95a146d04a28c44a76da3a6f38db7abfb3558f1ddfb773eb498fe71810d7f.json  query-d5ffbbe80591291966fec74f0f98becfe14ad47325f5f5bc735c102cc8a02d4b.json  query-da84393db577e19cf79fa20851e514b159c44dd67ec81d37f48fcce3c1bd4663.json  query-f0ad72f1a40029a5278d33f8b700741113e42741f31d85abcaf8beb51b4bdab0.json
migrations/: 20250528111216_init.down.sql  20250528111216_init.up.sql
src/: lib.rs  main.rs
static/: new-post.html  post-viewer-placeholder.html  style.css
templates/: base.hbs  basic.hbs  error.hbs  home.hbs  login.hbs  post-form.hbs  post-list.hbs  post-view.hbs  signup.hbs
(+4 files in other folders)
