[package]
name = "tailbb"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite", "time", "uuid"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["serde", "local-offset"] }
uuid = { version = "1.16.0", features = ["serde"] }
tower-http = { version = "0.6.4", features = ["fs"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
handlebars = { version = "6.3.2", features = ["dir_source"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
built = { version = "0.8.0", features = ["git2"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[package.metadata.bacon]
background = false
